# firthmodels

./: .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  benchmark_cox.py  benchmark_logistic.py  cox_report.md  cox_results.csv  generate_readme.py  generate_report.py  logistic_report.md  logistic_results.csv
src/firthmodels/: __init__.py  _blas_abi.py  _lrt.py  _profile_ci.py  _solvers.py  _utils.py  cox.py  logistic.py  separation.py
src/firthmodels/_numba/: _utils.py  cox.py  linalg.py  logistic.py
src/firthmodels/adapters/: statsmodels.py
tests/: conftest.py  test_adapters_statsmodels.py  test_blas_abi.py  test_cox.py  test_logistic.py  test_numba.py  test_numba_cox.py  test_numba_linalg.py  test_numba_logistic.py  test_separation.py
