[project]
name = "firthmodels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jon Luo", email = "20971593+jzluo@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.5",
    "scikit-learn>=1.6.1",
    "scipy>=1.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]
