[project]
name = "firthmodels"
version = "0.1.0"
description = "Firth-penalized models in Python"
readme = "README.md"
authors = [
    { name = "Jon Luo", email = "20971593+jzluo@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.6",
    "scipy>=1.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pandas>=1.5.3",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
]

[tool.ruff]
line-length = 88
exclude=[
    ".eggs",
    ".git",
    ".vscode",
    "__pycache__",
    "build",
    "dist"
]

[tool.mypy]
ignore_missing_imports = true
